[package]
name = "yew-storybook"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
cargo-edit = "0.12.2"

[dependencies]
yew = { version="0.20.0", features = ["csr"] }
clap = { version = "4.5.2", features = ["derive"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
thiserror = "1.0.57"
glob = "0.3"
